[package]
name = "video-core"
version = "0.1.0"
edition = "2021"
description = "video.cpp - Local video generation inference engine"
authors = ["video.cpp team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/video-ai/video.cpp"
homepage = "https://github.com/video-ai/video.cpp"

[lib]
name = "video_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "video"
path = "src/bin/main.rs"

[dependencies]
memmap2 = "0.9"
safemem = "0.3"
rayon = "1.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
rand = "0.8"
num_cpus = "1.16"
anyhow = "1.0"
bytemuck = "1.16"
clap = { version = "4.5", features = ["derive"] }
half = { version = "2.4", features = ["std", "bytemuck"] }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["ffi"]
ffi = []
cuda = []
vulkan = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[workspace]
members = []
